# Void-Braver

./: .gitignore  CMakeLists.txt  restructure.py
Features/Combat_Math/: CombatMath.cpp
Features/Dungeon_System/: Dungeon_System.cpp
Features/Turnbase_System/: turnbase_system.cpp
data/: saves.json
data/databases/: account.json  accounts.json  character_inventory.json  character_skill_cooldown.json  class.json  class_tier.json  crafting_recipe.json  dungeon.json  dungeon_depth_exp.json  dungeon_tale.json  enemy.json  enemy_drop.json  equipment_stat.json  item.json  item_category.json  level_exp.json  playable_character.json  skill.json
include/Core/: AccountManager.h  Character.h  Game.h  GameContext.h  JsonDbHelper.h  StateManager.h
include/Models/: Models.h
include/States/: CharSelectionState.h  GameState.h  HubState.h  LoginState.h  MainMenuState.h  RegisterState.h
include/Utils/: ConsoleUI.h
src/: main.cpp
src/Core/: AccountManager.cpp  AccountManager.h  Character.cpp  Character.h  Game.cpp  Game.h  GameState.h  StateManager.cpp  StateManager.h  Stats.h
src/Core/Include/: AccountManager.h  StateManager.h  Stats.h
src/Entities/: Player.h
src/States/: BattleState.cpp  BattleState.h  CharSelectionState.cpp  CharSelectionState.h  GameState.h  HubState.cpp  HubState.h  InventoryState.cpp  InventoryState.h  LoginState.cpp  LoginState.h  MainMenuState.cpp  MainMenuState.h  RegisterState.cpp  RegisterState.h
src/States/Include/: CharSelectionState.h  HubState.h  LoginState.h  MainMenuState.h  RegisterState.h
src/Utils/: ConsoleUI.cpp  ConsoleUI.h
textfiles/: class.txt  dungeon.txt  enemies.txt  item.txt  items.txt  leveling.txt  material.txt  sellitem.txt  shop.txt  skill.txt  skillformula.txt  tales.txt
